<resources>
    <string name="app_name">Valternis</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_action">Sign up</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">    Email</string>
    <string name="main_menu">Главное меню</string>
    <string name="add_image">Добавить фото профиля</string>
    <string name="notebook">Заметки</string>
    <string name="settings">Настройки</string>
    <string name="messenger">Мессенджер</string>
    <string name="info">О проекте</string>
    <string name="list">Interlocutors</string>
    <string name="creator">Создать</string>
    <string name="profile">Profile</string>
    <string name="redact">Редактировать</string>
    <string name="match">Мэтчи</string>
    <string name="respond">Отклики</string>
    <string name="create">Создать</string>
    <string name="add_idea_image">Фото к описанию</string>
    <string name="phone_number">Номер телефона</string>
    <string name="specialization">Специализация</string>
    <string name="main_info">Приложениу для поиска единомышленников в сфере start-up</string>
    <string name="additional_info">Работа выполнена в рамках курсовой работы ФКН ДПИ</string>
    <string name="contact_info">По всем вопросам писать на почту "taziyatdinov@edu.hse.ru"</string>
    <string name="author_info">Зиятдинов Тимур БПИ181</string>
    <string name="ok">Ok</string>
    <string name="hello_world">aloha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_f_t">FT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="switch_key">switch_key</string>
    <string name="account_pref">account_pref</string>
    <string name="general_pref">general_pref</string>
    <string name="ap_info">Mobile application + "\n" + for cross-language Valternis</string>
    <string name="title_activity_followers">FollowersActivity</string>

    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>

</resources>